--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agenda-de-contatos",
+  "name": "tutorial-node-agenda-de-contatos",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
